Fix droppable spelling mistake

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <a-cylinder position="1 0.75 1" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder> -->
       <!-- <a-plane position="0 0 0" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane> -->
       <!-- <a-obj-model position="0.5 1 0" animation="property: position; to: 1 0 5; dur: 2000; easing: linear; loop: true" rotation="0 -90 0" src="#zonder-tong" color="#4CC3D9"></a-obj-model> -->
-      <a-obj-model hoverable grabbable stretchable draggable dropppable position="0.5 1.5 0" rotation="0 -90 0" src="#zonder-tong-upper" color="#4CC3D9"></a-obj-model>
-      <a-obj-model hoverable grabbable stretchable draggable dropppable position="0.5 1.5 0" rotation="0 -90 0" src="#zonder-tong-lower" color="#FFC65D"></a-obj-model>
+      <a-obj-model hoverable grabbable stretchable draggable droppable position="0.5 1.5 0" rotation="0 -90 0" src="#zonder-tong-upper" color="#4CC3D9"></a-obj-model>
+      <a-obj-model hoverable grabbable stretchable draggable droppable position="0.5 1.5 0" rotation="0 -90 0" src="#zonder-tong-lower" color="#FFC65D"></a-obj-model>
 
       <!-- <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"
       event-set__enter="_event: mouseenter; color: #8FF7FF"
