--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       </a-assets>
 
       <!-- <a-entity gltf-model="#upperJaw"></a-entity> -->
-      <a-entity gltf-model="#lowerJaw" position="2 1 -4" scale="0.01 0.01 0.01" rotation="-90 -90 0"></a-entity>
-      <a-sky color="#fff"></a-sky>
+      <a-entity gltf-model="#lowerJaw" position="0.5 2.7 -0.5" scale="0.01 0.01 0.01" rotation="-90 -90 0"></a-entity>
+      <!-- <a-sky color="#fff"></a-sky> -->
              
       <!-- Controls for oculus -->
       <!-- <a-entity>
